removed 200 from add_and_auth and replaced 202

--- a/wallet/2.0.yaml
+++ b/wallet/2.0.yaml
@@ -1270,12 +1270,13 @@ paths:
             </body>
           </html>"
       responses:
-        '200':
-          description: "**OK** Response contains resource ID."
+        '202':
+          description: "**Accepted** Authorisation in progress.  Response contains resource Id."
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/LoyaltyCardProcessResponse'
+                allOf:
+                  - $ref: '#/components/schemas/LoyaltyCardProcessResponse'
         '400':
           description: '**Bad request** Client needs to modify the request before it can be retried'
           content:
