--- a/webhook/webhook.yaml
+++ b/webhook/webhook.yaml
@@ -2,9 +2,11 @@ openapi: 3.1.0
 info:
   version: 1.0.0
   title: Bink Webhook API
-  description:  "<h1>Introduction</h1>Receive Identified Transactions from Bink.
+  description:  "<h1>Bink webhook endpoints</h1>
+    This API allows clients to register their webhook endpoints with Bink. <br><br> This API accepts a JSON body and provides HTTP response codes and a JSON response body.
     <br><br>
-    This API describes the payload that receivers should expect to receive and how to respond to the webhook when it arrives. Receivers will implement this API specification to receive Identified Transactions from Bink. An Identified Transaction object represents a customer card payment at an enrolled retailer location. <br><br> This API accepts a JSON body and provides HTTP response codes and a JSON response body.
+    This specification also describes the payload that receivers should expect to receive to their endpoints and how to respond to the request. 
+    </br></br>
     <h2>Authentication</h2>
     Bink uses API keys to authenticate requests. Provide your API key in every request in the X-API-KEY header. Bink will provide each retailer with an API key upon integration. 
     <br><br>
@@ -12,10 +14,7 @@ info:
     Bink's API uses HTTP response codes. Codes in the 2xx range indicate success. Requests that result in errors codes have a code in the 4xx range and a JSON body containing <i>error_message</i> and <i>error_slug</i> fields. 
 
     <h2>Versioning</h2>
-    The Identified Transaction Webhook API is versionless, all changes will be backward-compatible. Any future changes that are backward-incompatible with result in a new API operation. 
-    <br><br>
-    <h2>Idempotency</h2>
-    Clients may safely retry retail transaction requests. All requests must contain a transaction identifer. You can safely resend a retail transaction provided it contains the same transaction identifier <i>(transaction_id)</i> as the original request.
+    The Webhook API is versionless, all changes will be backward-compatible. Any future changes that are backward-incompatible with result in a new API operation. 
     "
 paths: 
   /retailers/{retailer_id}/webhook_endpoints:
@@ -41,19 +40,29 @@ paths:
       responses: 
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  webhook_id: 
+                    type: number
+                    example: 123
         '401':
           $ref: '../common/components.yaml#/components/responses/Error401'
+        '403':
+          $ref: '../common/components.yaml#/components/responses/Error403'
         '422':
           $ref: '../common/components.yaml#/components/responses/Error422'  
 webhooks:
-  identifiedTransactions: 
+  Identified Transaction Webhook: 
     post:
       security: 
         - ApiKeyAuth: [] 
       tags:
-        - Identified Transaction
-      summary: "Webhooks for identified transactions"
-      description: "You can send an individual or a list of transactions. Transactions must have a unique ID and contain all required parameters. To ensure optimal performance, each value should use the format specified."
+        - Transaction Webhook
+      summary: "Webhook endpoint to be implemented by data receivers to receive identified transactions"
+      description: "Describes the payload that receivers should expect to receive to their endpoints and how to respond to the request. "
       requestBody:
         content:
           application/json:
@@ -91,7 +100,14 @@ components:
           type: array
           items:
             type: string
-          description: "The events that will trigger the webhook. Possible values are 'identified_transaction' and 'transaction'."
+          description: "The events that will trigger the webhook. Possible values are 'identified_transaction'. </br>An Identified Transaction object represents a customer card payment at an enrolled retailer location. "
+          examples: 
+            - "identified_transaction"
         url: 
           type: string
           description: "The URL that will receive the webhook payload."
+          example: "https://example.com/webhook"
+        enabled: 
+          type: boolean
+          description: "Whether the webhook is enabled or not."
+          example: true
