--- a/webhook/webhook.yaml
+++ b/webhook/webhook.yaml
@@ -3,7 +3,7 @@ servers:
   - url: https://retail.gb.bink.com/webhooks/"
     description: "Retail sandbox server"
 info:
-  version: 1.0.0-oas3.1
+  version: 1.0.0
   title: Bink Webhook API
   description:  "<h1>Bink webhook endpoints</h1>
     This API allows clients to register their webhook endpoints with Bink. <br><br> This API accepts a JSON body and provides HTTP response codes and a JSON response body.
@@ -77,8 +77,8 @@ webhooks:
         - ApiKeyAuth: [] 
       tags:
         - Transaction Webhook
-      summary: "Webhook endpoint to be implemented by data receivers to receive identified transactions"
-      description: "Describes the payload that receivers should expect to receive to their endpoints and how to respond to the request. "
+      summary: "Webhook endpoint to be implemented by data receivers to accept identified transactions from Bink"
+      description: "Describes the headers and payload that receivers should expect to receive to their endpoints and how to respond to the request."
       requestBody:
         content:
           application/json:
@@ -89,6 +89,8 @@ webhooks:
           description: OK
         '401':
           $ref: '../common/components.yaml#/components/responses/Error401'
+        '403':
+          $ref: '../common/components.yaml#/components/responses/Error403'
         '422':
           $ref: '../common/components.yaml#/components/responses/Error422'
 components:
@@ -123,6 +125,10 @@ components:
           type: string
           description: "The URL that will receive the webhook payload."
           example: "https://example.com/webhook"
+        secret: 
+          type: string
+          description: "A secret key that Bink will include as an API key OR use to sign the webhook payload. This key will be used to verify the authenticity of the payload."
+          example: "my_secret_key" 
   securitySchemes:
     ApiKeyAuth:      
       type: apiKey
