--- a/app/config.toml
+++ b/app/config.toml
@@ -5,8 +5,6 @@
 "root_redirect_path" = "/v2"
 
 [routes]
-"v1.2" = "wallet/1.2.html"
-"v1.3" = "wallet/1.3.html"
 "v2" = "wallet/2.0.html"
 "bpl" = "bpl/index.html"
 "webhook" = "webhook/webhook.html"
@@ -14,5 +12,5 @@
 "transaction" = "merchant/retail_transaction_api.html"
 "midas_messaging" = "merchant/async/index.html"
 
-"extras/appendix" = "extras/appendix.html"
-"extras/changelog" = "extras/changelog.html"
+"appendix" = "extras/appendix.html"
+"changelog" = "extras/changelog.html"
