added styling to v2 API spec

--- a/wallet/2.0.yaml
+++ b/wallet/2.0.yaml
@@ -17,10 +17,9 @@ info:
       <li>[Version History](changelog)</li>
       <li>[Appendix](appendix)</li>
     </ul>"
-  contact:
-    email: mmorar@bink.com
   x-logo: 
     url: https://logos.bink.com/img/logos/mono-teal.png
+    href: https://bink.com/
 paths:
   /token:
     post:
